# bevy-progressbar

./: Cargo.toml  README.md
assets/shader/: progress_shader.wgsl  progress_shader.wsgl
examples/: basic.rs
src/: lib.rs  progress_shader.wgsl
