[package]
name = "bevy-progressbar"
version = "0.7.0"
edition = "2021"
license = "MIT"
description = "Create multi sectons progressbars and use them in the bevy ui"
repository = "https://github.com/tecbeast42/bevy-progressbar"
readme = "README.md"
keywords = ["gamedev", "progressbar", "ui", "bevy_ui"]
categories = ["game-development"]
exclude = [
    ".github/*",
]

[dependencies]
bevy_app = "0.13"
bevy_asset = "0.13"
bevy_ecs = "0.13"
bevy_render = "0.13"
bevy_ui = "0.13"
bevy_reflect = "0.13"
bevy_utils = "0.13"

[dev-dependencies]
bevy = "0.13"
